# arch_labs_and_projects

./: README.md
arch_task_2/: Messenger API.postman_collection.json  init.sql  openapi.yaml  schema.sql  server.cpp  userData.h
arch_task_3/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  init.py  json_type_handlers.h  server.cpp
